test/spec_vectors/simd_int_to_int_extend/fail/module_20.wat
(module (func $i32x4.extend_low_i16x8_u-arg-empty (result v128) (i32x4.extend_low_i16x8_u)))